# a-memo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/docs/: release.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-01-insights.md
docs/superpowers/specs/: 2026-05-01-insights-design.md
memo/: __init__.py  __main__.py  cli.py  helpers.py  share_image.py
memo/assets/fonts/: NOTICE.txt  OFL.txt
memo/commands/: add.py  backup.py  delete.py  export.py  flomo_import.py  image.py  import_data.py  init.py  insights.py  link.py  links.py  list.py  rebuild_fts.py  reset.py  review.py  search.py  show.py  tag.py  tags.py  unlink.py  update.py
memoi/: cli.py  helpers.py
memoi/commands/: delete.py  init.py  list.py  rebuild_fts.py
packaging/homebrew/: README.md
scripts/: homebrew_formula.py
skills/memo/: SKILL.md
tests/: test_cli.py
