[project]
name = "a-memo"
version = "1.1.2"
description = "Lightweight memo CLI tool with SQLite + FTS5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["memo", "note", "cli", "sqlite", "fts"]
authors = [{name = "coderfee", email = "ddc@coderfee.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
png = ["playwright"]
dev = ["pytest"]

[project.scripts]
memo = "memo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memo"]
