[project]
name = "a-memo"
version = "1.5.3"
description = "Lightweight memo CLI tool with SQLite + FTS5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pillow"]
keywords = ["memo", "note", "cli", "sqlite", "fts"]
authors = [{name = "coderfee", email = "ddc@coderfee.com"}]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
memo = "memo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memo"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["memo"]
extend-exclude = ["dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = ["memo/share_image.py", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
